run_988/OM_geometries/slurm-3472295.out
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
* Date:                 Fri Mar 15 13:40:52 CET 2024
* Job name:             stc.sh
* Job id:               3472295
* User:                 ikovalen
* Account:              nemo
* Submit host:          cca013
* Partition:            htc
* Quality of service:   normal
* Nodelist:             ccwslurm0346
****************************************************************
   ------------------------------------------------------------
  | Welcome to ROOT 6.16/00                  https://root.cern |
  |                               (c) 1995-2018, The ROOT Team |
  | Built for linuxx8664gcc on Jan 23 2019, 09:06:13           |
  | From tags/v6-16-00@v6-16-00                                |
  | Try '.help', '.demo', '.license', '.credits', '.quit'/'.q' |
   ------------------------------------------------------------


Processing /sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp...
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Tracks_Saving.cpp:48:14: error: too many arguments to function call, expected 0, have 1
                Eve->set_h(eff_len);
                ~~~~~~~~~~ ^~~~~~~
/sps/nemo/scratch/ikovalen/TKEvent_old/TKEvent/include/TKEvent.h:101:3: note: 'set_h' declared here
                void set_h();
                ^
   ------------------------------------------------------------
  | Welcome to ROOT 6.16/00                  https://root.cern |
  |                               (c) 1995-2018, The ROOT Team |
  | Built for linuxx8664gcc on Jan 23 2019, 09:06:13           |
  | From tags/v6-16-00@v6-16-00                                |
  | Try '.help', '.demo', '.license', '.credits', '.quit'/'.q' |
   ------------------------------------------------------------


Processing /sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Visualization.cpp...
Error in <TFile::TFile>: file ./cutted_data_2770mm/OMs_Tracks_cutted_Run-988.root does not exist
Error in <HandleInterpreterException>: Trying to dereference null pointer or trying to call routine taking non-null arguments.
Execution of your code was aborted.
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_988/OM_geometries/Visualization.cpp:24:3: warning: null passed to a callee that requires a non-null argument [-Wnonnull]
                Tree[OM_num]->SetBranchAddress("A", &A_Tree[OM_num]);
                ^~~~~~~~~~~~
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
Date: Fri Mar 15 13:40:53 CET 2024
Job informations can be found using these commands:
Accounting:
sacct -j 3472295
Efficiency:
seff 3472295
****************************************************************
